# control-loop-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  Code Migration and Cleanup.md  GOVERNANCE.md  README.md  pyproject.toml
.control-loop/: ai_settings.json  backlog.json  contracts.json  policy.json  setpoints.json
.github/: CODEOWNERS  pull_request_template.md
contracts/: MODEL_CATALOG_PROMPT.md  model_catalog.contract.json
control_loop/: __init__.py  control_gate.py  default_policy.json  harness.py  policy.py  process_guard.py
docs/: AI_SETTINGS_TEMPLATE.json  BACKLOG_TEMPLATE.json  CONTEXT_INDEX_TEMPLATE.md  CONTRACTS_TEMPLATE.json  CONTROL_DASHBOARD.md  CONTROL_DASHBOARD_TEMPLATE.md  CONTROL_TOOLKIT_GUIDE.md  GATE_SUITES.md  POLICY_SCHEMA.md  POLICY_TEMPLATE.json  PROCESS_CHANGELOG.md  QUICKSTART.md  RELEASE_CHECKLIST.md  ROADMAP.md  ROADMAP_TEMPLATE.md  SETPOINTS_TEMPLATE.json
scripts/: __init__.py  generate_model_catalog_prompt.py  harness.py  render_dashboard.py  run_gate_suite.py  sync_setpoints.py  validate_backlog.py  validate_onboarding_docs.py  validate_release_hygiene.py  verify_control_loop.py  verify_governance_authority.py  verify_governance_survival.py
tests/: test_backlog_contract.py  test_control_loop_integrity_contract.py  test_dashboard_render_contract.py  test_governance_amendment_contract.py  test_governance_authority_contract.py  test_governance_survival_contract.py  test_harness_contract.py  test_model_catalog_contract.py  test_onboarding_docs_contract.py  test_policy_contract.py  test_process_guard_contract.py  test_release_hygiene_contract.py  (+1 more)
(+4 files in other folders)
