[project]
name = "control-loop-kit"
version = "0.1.0"
description = "Reusable control-loop checks for AI-assisted software engineering"
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["control_loop"]

